# playground

./: .gitignore  Cargo.toml  README.md  ___-0074428.mm_profdata  design.md  faculties  self.pile
deploy/freebsd/: README.md  playground_mcp
docs/: memory_temporal_redesign.md  playground.md  playground_event_model.md  playground_memory_architecture.md  teams.md  teams_scopes.md
examples/: archive_compaction.rs  playground_dashboard.rs
faculties/: archive  archive-import-chatgpt  archive-import-codex  archive-import-copilot  archive-import-gemini  archive.rs  archive_common.rs  archive_import_chatgpt.rs  archive_import_codex.rs  archive_import_copilot.rs  archive_import_gemini.rs  atlas  atlas.rs  breath  compass  compass.rs  files.rs  gauge.rs  headspace.rs  local-messages  local_messages.rs  media  media.rs  memory  memory.rs  migrate_timestamps.rs  orient  orient.rs  patience.rs  reason.rs  relations  relations.rs  teams  teams.rs  triage  triage.rs  web  web.rs  wiki.rs  workspace  (+1 more)
importers/: archive_import_chatgpt.rs  archive_import_claude_code.rs  archive_import_codex.rs  archive_import_copilot.rs  archive_import_gemini.rs
migrations/: kind_to_tag.rs  migrate_compass_at.rs  migrate_timestamps.rs  repair_bogus_wiki_timestamps.rs
notebooks/: compaction_lsm.rs
prompts/: llm_compaction_prompt.md  memory_lens_emotional.md  memory_lens_emotional_compaction.md  memory_lens_factual.md  memory_lens_factual_compaction.md  memory_lens_technical.md  memory_lens_technical_compaction.md  system_prompt.md  system_prompt_corpo.md
prompts/shared/: background.md
prompts/templates/: llm_compaction_prompt.tmpl.md  memory_lens_emotional.tmpl.md  memory_lens_factual.tmpl.md  memory_lens_technical.tmpl.md  system_prompt.tmpl.md
scripts/: lima-session.yaml.tmpl  lima.yaml.tmpl  migrate_timestamps.rs  render_prompts.py  rewrite-links.sh  view_telemetry.rs
src/: archive_schema.rs  blob_refs.rs  branch_util.rs  chat_prompt.rs  cog_schema.rs  config.rs  config_schema.rs  context_schema.rs  diagnostics.rs  exec_schema.rs  exec_worker.rs  llm_chat_schema.rs  llm_worker.rs  local_model.rs  main.rs  mcp.rs  mcp_http.rs  migrate.rs  model_chat_schema.rs  model_worker.rs  oauth.rs  openai_responses_schema.rs  relations_schema.rs  repo_ops.rs  repo_util.rs  schema.rs  time_util.rs  workspace_schema.rs  workspace_snapshot.rs
src/sandbox/: faculties.rs  jail.rs  lima.rs  mod.rs
